--- a/collab-shopping/src/components/template.html
+++ b/collab-shopping/src/components/template.html
@@ -1,18 +1,62 @@
 <section class="text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto">
-      <div class="flex flex-wrap -m-4">
-        <div class="p-4 md:w-1/3">
-          <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
-            <div class="p-6">
-              <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">Fruits</h2>
-              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{ name }}</h1>
-              <p class="leading-relaxed mb-3">{{ description }}</p>
-              <div class="flex items-center flex-wrap ">
-                <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="shopping-cart" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-shopping-cart fa-w-18 fa-3x"><path fill="currentColor" d="M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z" class=""></path></svg>
-                </a>
-              </div>
+  <div class="container px-5 py-24 mx-auto">
+    <div class="flex flex-wrap -m-4">
+      <div class="p-4 md:w-1/3">
+        <div
+          class="
+            h-full
+            border-2 border-gray-200 border-opacity-60
+            rounded-lg
+            overflow-hidden
+          "
+        >
+          <img
+            class="lg:h-48 md:h-36 w-full object-cover object-center"
+            src="https://dummyimage.com/720x400"
+            alt="blog"
+          />
+          <div class="p-6">
+            <h2
+              class="
+                tracking-widest
+                text-xs
+                title-font
+                font-medium
+                text-gray-400
+                mb-1
+              "
+            >
+              Fruits
+            </h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">
+              {{ name }}
+            </h1>
+            <p class="leading-relaxed mb-3">{{ description }}</p>
+            <div class="flex items-center flex-wrap">
+              <a
+                class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0"
+              >
+                <svg
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fas"
+                  data-icon="shopping-cart"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 576 512"
+                  class="svg-inline--fa fa-shopping-cart fa-w-18 fa-3x"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z"
+                    class=""
+                  ></path>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
